test/bad/coord1.pacc
/*
nocc1 7 14  "error: 'q' undeclared (first use in this function)"
*/

/* test that C errors are reported at the right place in the pacc file */

S <- "foo" { q }
